--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@500&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uifry</title>
   </head>
